--- a/static/style.css
+++ b/static/style.css
@@ -1,53 +1,60 @@
 body {
-    font-family: sans-serif;
-    max-width: 800px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+  font-family: sans-serif;
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 #drop_zone {
-    background-color: #eee;
-    border-radius: 8px;
-    padding: 20px;
-    width: 300px;
-    margin: 0 auto;
-    font-size: 0.8rem;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    cursor: pointer;
+  background-color: #eee;
+  border-radius: 8px;
+  padding: 20px;
+  width: 300px;
+  margin: 0 auto;
+  font-size: 0.8rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
 }
 
 #drop_zone.over {
-    border-color: #bbf;
-    background-color: #ccf;
+  border-color: #bbf;
+  background-color: #ccf;
 }
 
 .text-lg {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .text-sm {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .mb-5 {
-    margin-bottom: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .fake-button {
-    border-radius: 4px;
-    background-color: #ddd;
-    padding: 0.5rem 1rem;
-    color: #666;
-    pointer-events: none;
+  border-radius: 4px;
+  background-color: #ddd;
+  padding: 0.5rem 1rem;
+  color: #666;
+  pointer-events: none;
 }
 
 .disabled {
-    opacity: 0.2;
+  opacity: 0.2;
+}
+
+#status {
+  font-family: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    monospace;
+  white-space: pre;
+  font-size: 0.9rem;
 }
